--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,6 +5,20 @@
 }
 
 body{
+    background-color: #EEF2FF;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(111,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%230FF'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(24,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23FC0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='8.25'%3E%3Cpath transform='translate(-46.2 4.4) rotate(1.0999999999999996 1409 581) scale(0.988274)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='2.75' transform='translate(-49.5 33) rotate(4.3999999999999995 800 450) scale(1.0059449999999999)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(12.100000000000001 -49.5) rotate(38.5 401 736) scale(1.0059449999999999)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='2.5'%3E%3Cpath transform='translate(198 -2.200000000000001) rotate(0.5500000000000003 150 345) scale(0.9887579999999999)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='5.5' transform='translate(-71.5 -88) rotate(39.6 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-136.4 39.6) rotate(6.6 1400 132) scale(0.945)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;;
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    display: flex;
+}
+
+.mobile-container{
+    background-color: #ffffff;
+    width: 400px;
+}
+
+img{
+    max-width: 100%;
 }
