--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ header input:focus {
 header button {
   background-color: transparent;
   border: none;
-  color: #a8dadc;
+  color: #1d3557;
   font-size: 1.5rem;
   margin-left: 10px;
 }
