--- a/styles/style.scss
+++ b/styles/style.scss
@@ -41,7 +41,6 @@ header {
     padding: 0.5rem 1rem;
     border-radius: 15px;
     width: 500px;
-    // transition: 0.5s;
     outline: none;
 
     &:focus{
@@ -52,7 +51,7 @@ header {
   button {
     background-color: transparent;
     border: none;
-    color: #a8dadc;
+    color: #1d3557;
     font-size: 1.5rem;
     margin-left: 10px;
   }
