--- a/styles/style.css
+++ b/styles/style.css
@@ -91,8 +91,13 @@ header button {
 }
 
 .fav-meals li {
+  position: relative;
   margin: 5px;
   width: 75px;
+}
+
+.fav-meals li:hover .clear {
+  opacity: 1;
 }
 
 .fav-meals li img {
@@ -104,6 +109,18 @@ header button {
   height: 70px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.fav-meals li .clear {
+  color: #e63946;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  opacity: 0;
+  top: -0.6rem;
+  right: -0.6rem;
+  font-size: 1.2rem;
 }
 
 .fav-meals li span {
