--- a/styles/style.scss
+++ b/styles/style.scss
@@ -55,6 +55,7 @@ header {
     color: #1d3557;
     font-size: 1.5rem;
     margin-left: 10px;
+    cursor: pointer;
   }
 }
 
@@ -101,6 +102,11 @@ header {
 
     span {
       font-size: 0.9rem;
+      display: inline-block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      width: 75px;
     }
   }
 }
