--- a/styles/style.css
+++ b/styles/style.css
@@ -73,9 +73,15 @@ header button {
 }
 
 .fav-container {
-  background-color: #b6d1e4;
+  background-color: #4158d0;
+  background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%);
   padding: 1rem;
   text-align: center;
+}
+
+.fav-container h3 {
+  color: white;
+  font-weight: 600;
 }
 
 .fav-meals {
@@ -159,6 +165,10 @@ header button {
   padding: 0.25rem 1rem;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
+  background-color: #4158d0;
+  background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%);
+  color: white;
+  font-weight: 600;
 }
 
 .meal-body {
