--- a/styles/style.scss
+++ b/styles/style.scss
@@ -60,9 +60,20 @@ header {
 }
 
 .fav-container {
-  background-color: #b6d1e4;
+  background-color: #4158d0;
+  background-image: linear-gradient(
+    43deg,
+    #4158d0 0%,
+    #c850c0 46%,
+    #ffcc70 100%
+  );
   padding: 1rem;
   text-align: center;
+
+  h3 {
+    color: white;
+    font-weight: 600;
+  }
 }
 
 .fav-meals {
@@ -133,6 +144,15 @@ header {
     padding: 0.25rem 1rem;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
+    background-color: #4158d0;
+    background-image: linear-gradient(
+      43deg,
+      #4158d0 0%,
+      #c850c0 46%,
+      #ffcc70 100%
+    );
+    color: white;
+    font-weight: 600;
   }
 }
 
