--- a/styles/style.scss
+++ b/styles/style.scss
@@ -87,6 +87,7 @@ header {
     position: relative;
     margin: 5px;
     width: 75px;
+    color: white;
     &:hover .clear {
       opacity: 1;
     }
