changed the colour of the heart button

--- a/styles/style.css
+++ b/styles/style.css
@@ -198,7 +198,7 @@ header button {
 }
 
 .meal-body .fav-btn.active {
-  color: red;
+  color: #e63946;
   font-size: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
