--- a/styles/style.scss
+++ b/styles/style.scss
@@ -180,3 +180,59 @@ header {
     }
   }
 }
+
+.popup-container{
+  background-color: rgba($color: #000000, $alpha: 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+
+}
+
+ .hidden{
+    opacity: 0;
+    pointer-events: none;    
+  }
+
+.popup{
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 0 2rem;
+  position: relative;
+  max-width: 600px;
+  width: 100%;
+
+  img{
+    border-radius: 20px;
+  }
+
+  h1{
+    text-align: center;
+    color: white;
+    font-weight: 600;
+    background-color: #4158d0;
+    background-image: linear-gradient(
+      43deg,
+      #4158d0 0%,
+      #c850c0 46%,
+      #ffcc70 100%
+    );
+    border-radius: 20px;
+  }
+
+  .close-popup{
+    background-color: transparent;
+    border: none;
+    font-size: 2rem;
+    position: absolute;
+    top: 0.1rem;
+    right: 0.02rem;
+
+  }
+
+}
