added cursor pointer to close popup

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -229,6 +229,7 @@ header {
     background-color: transparent;
     border: none;
     font-size: 2rem;
+    cursor: pointer;
     position: absolute;
     top: 0.1rem;
     right: 0.02rem;
