--- a/styles/style.css
+++ b/styles/style.css
@@ -251,6 +251,7 @@ header button {
   background-color: transparent;
   border: none;
   font-size: 2rem;
+  cursor: pointer;
   position: absolute;
   top: 0.1rem;
   right: 0.02rem;
